# ohte-harjoitustyo

./: .gitignore  README.md
SeuraaOpintojasi/: db.db  pyproject.toml  tasks.py
SeuraaOpintojasi/dokumentaatio/: arkkitehtuuri.md  arkkitehtuurikuvaus.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
SeuraaOpintojasi/src/: index.py
SeuraaOpintojasi/src/entities/: course.py  entry.py  users.py
SeuraaOpintojasi/src/repositories/: course_repository.py  users_repository.py
SeuraaOpintojasi/src/services/: course_services.py  users_services.py
SeuraaOpintojasi/src/tests/: course_repository_test.py  course_services_test.py  users_repository_test.py  users_services_test.py
SeuraaOpintojasi/src/ui/: login_ui.py  sign_up_ui.py  summary_ui.py  tracking_ui.py  ui.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
ohte-harjoitustyo/: README.md
ohte-harjoitustyo/SeuraaOpintojasi/: pyproject.toml
ohte-harjoitustyo/SeuraaOpintojasi/src/: index.py
ohte-harjoitustyo/SeuraaOpintojasi/src/repositories/: users_repository.py
ohte-harjoitustyo/SeuraaOpintojasi/src/services/: users_services.py
ohte-harjoitustyo/SeuraaOpintojasi/src/ui/: login_ui.py  sign_up_ui.py  ui.py
ohte-harjoitustyo/laskarit/: README.md
ohte-harjoitustyo/laskarit/viikko1/: komentorivi.txt
ohte-harjoitustyo/laskarit/viikko2/maksukortti/: pyproject.toml
ohte-harjoitustyo/laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
