[tool.poetry]
name = "seuraaopintojasi"
version = "0.1.0"
description = ""
authors = ["hhuuskon <henri.huuskonen@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
